# autocreative

./: .brand-kit-template.json  .env.example  .gitignore  .social-template.json  CLAUDE.md  HANDOFF.md  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  f22t01_flyer_template_and_subtype_split.py  f23t01_postcard_primitive.py  f24t01_poster_primitive.py
docs/: brochure-gallery-plan.md  brochure-improvement-v2.md  brochure-improvements.md  brochure-plan.md  brochure-v2-plan.md  n8n.json  spec.md
docs/brochure-templates/: edge_anchored_geometry.json  editorial_spread.json  hero_image_dominant.json  minimal_panel_overlay.json  pattern_overlay_hybrid.json  (+1 more)
flyer_generator/: __init__.py  __main__.py  config.py  errors.py  logging_config.py  models.py  pipeline.py  presets.py  workflow_loader.py  zones.py
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: generate_test_matrix.py
tests/: conftest.py  test_cli.py  test_comfy_client.py  test_composer.py  test_config.py  test_errors.py  test_layout.py  test_llm_resilience.py  test_models.py  test_pipeline.py  test_pipeline_canvas_dimensions.py  test_preprocessor.py  test_presets.py  test_prompt_builder.py  test_public_api.py  test_rasterizer.py  test_vision.py  test_zones.py
(+580 files in other folders)
