[project]
name = "flyer-generator"
version = "0.1.0"
description = "AI-powered event flyer generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "anthropic>=0.87.0",
    "pillow>=12.2.0",
    "cairosvg>=2.9.0",
    "typer>=0.24.1",
    "reportlab>=4.4.10",
    "pypdf>=6.10.2",
    "beautifulsoup4>=4.14",
    "tinycss2>=1.5",
    "wcag-contrast-ratio>=0.9",
    "coloraide>=8,<9",
    "playwright>=1.58",
    "python-ulid>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
